# formwork

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE-MIT  README.md  competition-research.md  constitution.md  fep-1.md  fep-3.md  fep-4.md  fep2.md  formwork.md  justfile
.github/workflows/: ci.yml  flake-repro.yml  release.yml
crates/formwork-blueprint/: Cargo.toml
crates/formwork-blueprint/src/: catalog.rs  discovery.rs  launcher.rs  layer.rs  lib.rs  narrow.rs  path.rs  provenance.rs
crates/formwork-cli/: Cargo.toml
crates/formwork-cli/src/: blueprint_load.rs  learn.rs  main.rs  render.rs  spec_load.rs
crates/formwork-cli/tests/: cli_surface.rs  gateway_cli.rs  profiles.rs  record_trace.rs  run_operator_channel.rs
crates/formwork-compile/: Cargo.toml
crates/formwork-compile/src/: lib.rs  linux.rs  policy.rs  report.rs  sbpl.rs
crates/formwork-compile/tests/: phase1.rs
crates/formwork-confine/: Cargo.toml
crates/formwork-confine/src/: lib.rs
crates/formwork-confine/src/linux/: landlock.rs  mod.rs  seccomp.rs
crates/formwork-confine/src/macos/: mod.rs
crates/formwork-confine/tests/: linux_confine.rs  macos_confine.rs
crates/formwork-detect/: Cargo.toml
crates/formwork-detect/src/: lib.rs
crates/formwork-gateway/: Cargo.toml
crates/formwork-gateway/src/: lib.rs
crates/formwork-gateway/tests/: gateway.rs  real_server.rs
crates/formwork-seam/: Cargo.toml
crates/formwork-seam/src/: lib.rs
crates/formwork-seam/tests/: seam_confined.rs  seam_transport.rs
crates/formwork-seam/tests/common/: mod.rs
crates/formwork-spec/: Cargo.toml
crates/formwork-spec/src/: lib.rs  narrow.rs  path.rs
docker/: Dockerfile.linux-dev  Dockerfile.linux-test
docs/: STATUS.md  competition-research.md  fep-1.md  fep-3.md  fep2-examples.md  fep2-plan.md  fep2.md  fep4-plan.md  gaps-plan.md  linux-backend.md  mcp-tool-patterns.md  spikes.md  unstated-requirements.md  usability-review.md
examples/: README.md  e2e-001.toml  gateway-demo.sh
examples/blueprints/: agent-session.toml  dev-session.toml.tpl  mcp-gateway.toml  rules-demo.toml
examples/claude-code/: README.md  mcp.json  sandbox-agent.sh
examples/codex/: README.md  config.toml  sandbox-agent.sh
examples/opencode/: README.md  opencode.json  sandbox-agent.sh
examples/specs/: agent-session.toml  mcp-gateway.toml
profiles/: credential-catalog.toml  default.toml  sensitive-set.toml  strict.toml
py/: README.md  pyproject.toml
py/harness/: conftest.py  helpers.py  test_adv_credentials.py  test_blueprint_model.py  test_compile.py  test_credential_catalog.py  test_discovery.py  test_env_posture.py  test_examples_blueprints.py  test_examples_gateway.py  test_examples_specs.py  test_fs_confinement.py  test_learn_linux.py  test_learn_review.py  test_net_egress.py  test_profiles.py  test_requirements.py  traceability.py
research/: codebase-research.md  eval-model-proposals.md  proposal-a-implementation-plan.md
