[workspace]
resolver = "2"
members = [
    "crates/formwork-blueprint",
    "crates/formwork-detect",
    "crates/formwork-compile",
    "crates/formwork-confine",
    "crates/formwork-seam",
    "crates/formwork-gateway",
    "crates/formwork-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brianv0/formwork"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

formwork-blueprint = { path = "crates/formwork-blueprint" }
formwork-detect = { path = "crates/formwork-detect" }
formwork-compile = { path = "crates/formwork-compile" }
formwork-confine = { path = "crates/formwork-confine" }
formwork-gateway = { path = "crates/formwork-gateway" }

[profile.release]
lto = "thin"
