[workspace]
resolver = "2"
members = [
    "crates/formwork-blueprint",
    "crates/formwork-detect",
    "crates/formwork-compile",
    "crates/formwork-confine",
    "crates/formwork-seam",
    "crates/formwork-gateway",
    "crates/formwork-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brianv0/formwork"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# MCP tool/resource/prompt name shading with allow/deny patterns (FW-GW9). Userspace string
# matching only — never a kernel path boundary, so it stays clear of the "no general glob" fs
# doctrine (FW-BP4). The `regex` engine matches in guaranteed linear time (no catastrophic
# backtracking), so a hostile blueprint pattern cannot ReDoS the gateway; `unicode`/`perf` features
# are dropped to keep the trust base and binary small (tool names are ASCII identifiers).
regex = { version = "1", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Linux confiner backends (Phase 2). Linux-only; referenced under a target cfg so the macOS build
# never pulls them. Every crate here widens the trust base (Growth), so these two are the whole of it:
# `landlock` carries the filesystem/net boundary, `seccompiler` the syscall baseline.
landlock = "0.4"
seccompiler = "0.4"

formwork-blueprint = { path = "crates/formwork-blueprint" }
formwork-detect = { path = "crates/formwork-detect" }
formwork-compile = { path = "crates/formwork-compile" }
formwork-confine = { path = "crates/formwork-confine" }
formwork-gateway = { path = "crates/formwork-gateway" }

[profile.release]
lto = "thin"
