[package]
name = "formwork-blueprint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
# Parses only the embedded credential catalog (FW-CRED1) at first use; already in this binary's
# trust base via formwork-cli, so it widens nothing (Growth).
toml = { workspace = true }

[dev-dependencies]
# serde_json is used only by the path-pattern serde round-trip tests, not by the crate itself.
serde_json = { workspace = true }
