[package]
name = "formwork-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "formwork"
path = "src/main.rs"

[dependencies]
formwork-spec = { workspace = true }
formwork-detect = { workspace = true }
formwork-compile = { workspace = true }
formwork-confine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
