[package]
name = "formwork-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "formwork"
path = "src/main.rs"

[dependencies]
formwork-blueprint = { workspace = true }
formwork-detect = { workspace = true }
formwork-compile = { workspace = true }
formwork-confine = { workspace = true }
formwork-gateway = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# The black-box gateway test drives the `formwork` binary as an async MCP host; the product CLI
# itself links no runtime (constitution Layers: tokio lives only in formwork-gateway).
tokio = { version = "1", features = ["rt", "io-util", "process", "time"] }
