[package]
name = "formwork-confine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Test-support only: a self-contained egress probe the Seatbelt tests run *inside* the sandbox to
# observe connect() denial from a binary that needs nothing outside the policy's read scope. Std-only
# and not part of the shipped binary (releases build only formwork-cli). See src/bin/connect_probe.rs.
[[bin]]
name = "connect_probe"
path = "src/bin/connect_probe.rs"

[dependencies]
formwork-spec = { workspace = true }
formwork-detect = { workspace = true }
formwork-compile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Phase 2 (Linux) will add `landlock` and `seccompiler` here. They are intentionally NOT wired yet:
# the backend must be verified against a real kernel (Docker/Lima) before it can claim enforcement,
# and adding runnable-looking code that has never touched a kernel would violate FW-XR1/FW-INV5.
# See docs/linux-backend.md for the researched implementation plan.
