[package]
name = "formwork-confine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
formwork-blueprint = { workspace = true }
formwork-detect = { workspace = true }
formwork-compile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Phase 2 Linux backend. Landlock (fs/net) + seccomp (syscall baseline), verified against a real
# kernel before claiming enforcement (FW-XR1/FW-INV5). See docs/linux-backend.md.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
seccompiler = { workspace = true }
